# libnostr-c

./: .gitignore  .valgrind-suppressions  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONFIG.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  Taskfile.yaml  build.zig  build.zig.zon  idf_component.yml  libnostr-c-config.cmake.in  libnostr-c.pc.in
.github/scripts/: fix-noscrypt-headers.sh  generate-openssl-headers.sh
.github/workflows/: build.yml  ci.yml
benchmark/: CMakeLists.txt  bench_crypto.c  bench_encoding.c  bench_event.c  bench_key.c  bench_memory.c  bench_runner.c  benchmark.h  memory_analysis.c  profile_runner.c  regression_test.c  simd_analysis.c
docs/: API.md  BUILDING.md  CI_FEATURE_MATRIX.md  FEATURE_FLAGS.md  GETTING_STARTED.md  INTEGRATION.md  PERFORMANCE.md  THREAD_SAFETY.md
examples/: CMakeLists.txt  README.md  basic_event.c  gift_wrap_demo.c  hd_key_example.c  key_management.c  nip13_example.c  publish_note.c  relay_client.c  subscribe_events.c  wallet_connect_demo.c  wallet_connect_demo_minimal.c  zap_example.c
include/: nostr.h  nostr_features.h  nostr_features.h.in  nostr_relay_protocol.h
include/compat/cjson/: cJSON.h
src/: bech32.c  bech32_internal.h  config.c  event.c  features.c  hd_key.c  key.c  nip05.c  nip10.c  nip13.c  nip17.c  nip18.c  nip21.c  nip25.c  nip26.c  nip44.c  nip46.c  nip47.c  nip47_commands.c  nip47_session.c  nip49.c  nip51.c  nip59.c  nip65.c  relay.c  relay_filter.c  relay_message.c  relay_nip11.c  relay_protocol.c  utils.c  zap.c
src/data/: bip39_english.h
test/esp-idf/: CMakeLists.txt
test/esp-idf/main/: CMakeLists.txt  test_main.c
tests/: CMakeLists.txt  README.md  test_bech32.c  test_event.c  test_filter_clone.c  test_hd_integration.c  test_hd_key.c  test_key.c  test_nip04.c  test_nip05.c  test_nip06.c  test_nip10.c  test_nip18.c  test_nip21.c  test_nip25.c  test_nip26.c  test_nip44.c  test_nip44_comprehensive.c  test_nip44_simple.c  test_nip47.c  test_nip47_minimal.c  test_nip49.c  test_nip50.c  test_nip51.c  test_nip59.c  test_nip65.c  test_relay.c  test_relay_integration.c  test_relay_protocol.c  test_relay_protocol_accessors.c  test_relay_protocol_core.c  test_relay_protocol_json.c  test_relay_protocol_nip.c  test_runner.c  test_thread_safety.c  test_utils.c  test_zap.c  unity.h
zig-include/: nostr_features.h
